# KanadeMinderAPP

./: .gitignore  CLAUDE.md  KanadeMinder.spec  Makefile  README.md  pyproject.toml
scripts/: bump_version.py  make_dmg.sh  make_icon.py
src/kanademinder/: __init__.py  __main__.py  cli.py  config.py  db.py  models.py  recurrence.py
src/kanademinder/app/: __init__.py
src/kanademinder/app/chat/: __init__.py  actions.py  display.py  handler.py  matching.py  prompts.py
src/kanademinder/app/config/: setup.py
src/kanademinder/app/daemon/: __init__.py  html_report.py  launchd.py  notifications.py  prompts.py  scheduler.py
src/kanademinder/app/web/: __init__.py  api.py  frontend.py  router.py
src/kanademinder/app/web/static/: app.js  index.html  style.css
src/kanademinder/chat/: repl.py
src/kanademinder/daemon/: notifier.py  scheduler.py
src/kanademinder/gui/: __init__.py  api.py  app.py
src/kanademinder/gui/report/: __init__.py  window.py
src/kanademinder/gui/settings/: __init__.py  api.py  window.py
src/kanademinder/gui/settings/static/: app.js  settings.html  (+1 more)
src/kanademinder/llm/: client.py  parser.py  prompts.py
src/kanademinder/web/: __init__.py  server.py
tests/: conftest.py  test_client.py  test_config.py  test_config_setup.py  test_db.py  test_frontend.py  test_gui_app.py  test_gui_assets.py  test_gui_report.py  test_gui_settings.py  test_gui_window_lifecycle.py  test_handler.py  test_hierarchy_rendering.py  test_html_report.py  test_models.py  test_notifier.py  test_parser.py  test_recurrence.py  test_scheduler.py  test_web_api.py
